--- a/app/src/main/resources/templates/inicio.html
+++ b/app/src/main/resources/templates/inicio.html
@@ -4,12 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Aceleradora Ágil - Esqueleto Ambulante</title>
-    <link href="/css/estilo.css" rel="stylesheet">
 </head>
 <body>
     <div class="agrupadora">
         <header class="cabecalho">
-            <h1>Esqueleto Ambulante</h1>
+            <h1>Hospebem</h1>
         </header>
 
         <nav class="navegacao">
@@ -19,10 +18,6 @@
                 <a href="/pessoa/cadastro"><li>Cadastrar Pessoa</li></a>
             </ul>
         </nav>
-
-        <div class="conteudo">
-            <img src="https://media3.giphy.com/media/l4JyOCNEfXvVYEqB2/giphy.gif">
-        </div>
     </div>
 </body>
 </html>
