#01<@todos>Implementa novos campos no Formulário

--- a/app/src/main/resources/templates/solicitacao/cadastro.html
+++ b/app/src/main/resources/templates/solicitacao/cadastro.html
@@ -32,6 +32,28 @@
 
                 </div>
 
+                <div>
+                    <label class="col s1">
+                        <input name="sexo_paciente" type="radio" value="f">
+                        <span>F</span>
+                    </label>
+                    <label class="col s1">
+                        <input name="sexo_paciente" type="radio" value="m">
+                        <span>M</span>
+                    </label>
+                </div>
+
+                <div>
+                    <label class="col s1">
+                        <input name="situacao_transplante" type="radio" value="pre">
+                        <span>Pré-Transplante</span>
+                    </label>
+                    <label class="col s1">
+                        <input name="situacao_transplante" type="radio" value="pos">
+                        <span>Pós-Transplante</span>
+                    </label>
+                </div>
+
                 <h2 class="col s12">Endereço</h2>
                 <div class="col s9">
                     <span>Rua</span>
@@ -58,21 +80,33 @@
                 <h3 class="col s12"> Acompanhante 1:</h3>
                 <div class="col s12">
                     <span>Nome Completo:</span>
-                    <input name="nomeAcompanhante1" type="text">
+                    <input name="nome_acompanhante1" type="text">
+                </div>
+
+                <div>
+                    <label class="col s1">
+                        <input name="sexo_acompanhante1" type="radio" value="f">
+                        <span>F</span>
+                    </label>
+                    <label class="col s1">
+                        <input name="sexo_acompanhante1" type="radio" value="m">
+                        <span>M</span>
+                    </label>
                 </div>
 
                 <h3 class="col s12"> Acompanhante 2:</h3>
                 <div class="col s12">
                     <span>Nome Completo:</span>
-                    <input name="nomeAcompanhante2" type="text">
+                    <input name="nome_acompanhante2" type="text">
                 </div>
+
                 <div>
                     <label class="col s1">
-                        <input name="group1" type="radio" value="f">
+                        <input name="sexo_acompanhante2" type="radio" value="f">
                         <span>F</span>
                     </label>
                     <label class="col s1">
-                        <input name="group1" type="radio" value="m">
+                        <input name="sexo_acompanhante2" type="radio" value="m">
                         <span>M</span>
                     </label>
                 </div>
