#01 <@todos> Faz relacionamento entre endereco e hospede

--- a/app/src/main/resources/templates/solicitacao/cadastro.html
+++ b/app/src/main/resources/templates/solicitacao/cadastro.html
@@ -31,84 +31,30 @@
                     <input name="nome" type="text">
 
                 </div>
-
-                <div>
-                    <label class="col s1">
-                        <input name="sexo_paciente" type="radio" value="f">
-                        <span>F</span>
-                    </label>
-                    <label class="col s1">
-                        <input name="sexo_paciente" type="radio" value="m">
-                        <span>M</span>
-                    </label>
-                </div>
-
-                <div>
-                    <label class="col s1">
-                        <input name="situacao_transplante" type="radio" value="pre">
-                        <span>Pré-Transplante</span>
-                    </label>
-                    <label class="col s1">
-                        <input name="situacao_transplante" type="radio" value="pos">
-                        <span>Pós-Transplante</span>
-                    </label>
-                </div>
-
-                <h2 class="col s12">Endereço</h2>
-                <div class="col s9">
-                    <span>Rua</span>
-                    <input name="rua" type="text">
-                </div>
-                <div class="col s3">
-                    <span>n°</span>
-                    <input name="numero" type="text">
-                </div>
-                <div class="col s5">
-                    <span>Cidade</span>
-                    <input name="cidade" type="text">
-                </div>
-                <div class="col s5">
-                    <span>Bairro</span>
-                    <input name="bairro" type="text">
-                </div>
-                <div class="col s2">
-                    <span>UF</span>
-                    <input name="uf" type="text">
-                </div>
-
-                <h2 class="col s12"> Dados Acompanhante </h2>
-                <h3 class="col s12"> Acompanhante 1:</h3>
+                <h1>Endereço:</h1>
                 <div class="col s12">
-                    <span>Nome Completo:</span>
-                    <input name="nome_acompanhante1" type="text">
+                    <span>Rua:</span>
+                    <input name ="endereco.rua" type="text">
                 </div>
 
-                <div>
-                    <label class="col s1">
-                        <input name="sexo_acompanhante1" type="radio" value="f">
-                        <span>F</span>
-                    </label>
-                    <label class="col s1">
-                        <input name="sexo_acompanhante1" type="radio" value="m">
-                        <span>M</span>
-                    </label>
-                </div>
-
-                <h3 class="col s12"> Acompanhante 2:</h3>
                 <div class="col s12">
-                    <span>Nome Completo:</span>
-                    <input name="nome_acompanhante2" type="text">
+                    <span>Número:</span>
+                    <input name="endereco.numero" type="text">
                 </div>
 
-                <div>
-                    <label class="col s1">
-                        <input name="sexo_acompanhante2" type="radio" value="f">
-                        <span>F</span>
-                    </label>
-                    <label class="col s1">
-                        <input name="sexo_acompanhante2" type="radio" value="m">
-                        <span>M</span>
-                    </label>
+                <div class="col s12">
+                    <span>Cidade:</span>
+                    <input name="endereco.cidade" type="text">
+                </div>
+
+                <div class="col s12">
+                    <span>Bairro:</span>
+                    <input name="endereco.bairro" type="text">
+                </div>
+
+                <div class="col s12">
+                    <span>Uf:</span>
+                    <input name="endereco.uf" type="text">
                 </div>
 
 
