<@mmazzarino, @DiovaneMendes> Termina lista de soliticações (casa)

--- a/app/src/main/resources/templates/inicio.html
+++ b/app/src/main/resources/templates/inicio.html
@@ -16,6 +16,9 @@
                 <a href="/"><li>Início</li></a>
                 <a href="/pessoa/lista"><li>Pessoas</li></a>
                 <a href="/pessoa/cadastro"><li>Cadastrar Pessoa</li></a>
+                <a href="/solicitacao/cadastro"><li>Cadastro solicitação </li></a>
+                <a href="/lista"><li>Lista geral de solicitações </li></a>
+
             </ul>
         </nav>
     </div>
