--- a/app/src/main/resources/templates/listaSolicitacao/lista.html
+++ b/app/src/main/resources/templates/listaSolicitacao/lista.html
@@ -2,18 +2,52 @@
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Hospebem</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
 </head>
 <body>
+<header>
+    <nav class="navbar">
+        <div class="nav-wrapper container">
+                <span>
+                    HOSPEBEM
+                </span>
+        </div>
+    </nav>
+</header>
 <h1>Lista de Solicitações:</h1>
 <br>
-<table>
-    <tr>
-        <td>Nome</td>
-    </tr>
-    <tr th:each="solicitacao : ${solicitacoes}">
-        <td th:text="${solicitacao.nome}"></td>
-    </tr>
-</table>
+    <table>
+        <tr>
+            <td>Data</td>
+            <td>Nome</td>
+            <td>Idade</td>
+            <td>Informações</td>
+            <td>Aceitar</td>
+            <td>Negar</td>
+        </tr>
+
+        <tr th:each="solicitacao : ${solicitacoes}">
+            <td>19-8-2013</td>
+
+            <td th:text="${solicitacao.nome}"></td>
+            <td>24</td>
+            <td>
+                <a href="/">
+                    <li>Olhar</li>
+                </a>
+            </td>
+            <td>
+                <a href="/">
+                    <li>✔</li>
+                </a>
+            </td>
+            <td>
+                <a href="/">
+                    <li>X</li>
+                </a>
+            </td>
+        </tr>
+    </table>
 </body>
 </html>
