<@brendamoniqueb, @eduarda96, @ingridDuarte, @laurascclaro> tenta implementar generos de diferentes acompanhantes na tabela solicitacao

--- a/app/src/main/resources/templates/solicitacao/cadastro.html
+++ b/app/src/main/resources/templates/solicitacao/cadastro.html
@@ -83,16 +83,16 @@
                 <div class="col s12">
                     <h5>Acompanhante 1:</h5>
                     <span>Nome Completo:</span>
-                    <input name="acompanhante" type="text">
+                    <input name="acompanhante.nome" type="text">
                 </div>
 
                 <div class="col s12">
                     <label>
-                        <input name="generoAcomp1" type="radio" value ="F" >
+                        <input name="acompanhante.genero1" type="radio" value ="F" >
                         <span>F</span>
                     </label>
                     <label>
-                        <input name="generoAcomp1" type="radio" value ="M">
+                        <input name="acompanhante.genero1" type="radio" value ="M">
                         <span>M</span>
                     </label>
                 </div>
@@ -101,16 +101,16 @@
                 <div class="col s12">
                     <h5>Acompanhante 2:</h5>
                     <span>Nome Completo:</span>
-                    <input name="acompanhante" type="text">
+                    <input name="acompanhante.nome" type="text">
                 </div>
 
                 <div class="col s12">
                     <label>
-                        <input name="generoAcomp2" type="radio" value ="F" >
+                        <input name="acompanhante.genero2" type="radio" value ="F" >
                         <span>F</span>
                     </label>
                     <label>
-                        <input name="generoAcomp2" type="radio" value ="M">
+                        <input name="acompanhante.genero2" type="radio" value ="M">
                         <span>M</span>
                     </label>
                 </div>
