--- a/app/src/main/resources/templates/login/login.html
+++ b/app/src/main/resources/templates/login/login.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.w3.org/1999/xhtml">
 
 <head>
     <meta charset="utf-8" />
@@ -15,29 +15,32 @@
 <body>
     <div class="container">
         <h1>HospeBem</h1>
-        <div class="row">
-            <div class="input-field col">
-                <i class="material-icons prefix">account_circle</i>
-                <input id="first_name" type="text" class="validate">
-                <label for="first_name">Usuário</label>
+
+        <form th:action="@{/login}" method="POST">
+            <div class="row">
+                <div class="input-field col">
+                    <i class="material-icons prefix">account_circle</i>
+                    <input id="first_name" type="text" class="validate">
+                    <label for="first_name">Usuário</label>
+                </div>
             </div>
-        </div>
 
-        <div class="row">
-            <div class="input-field col">
-                <i class="material-icons prefix">lock</i>
-                <input id="password" type="password" class="validate">
-                <label for="password">Senha</label>
+            <div class="row">
+                <div class="input-field col">
+                    <i class="material-icons prefix">lock</i>
+                    <input id="password" type="password" class="validate">
+                    <label for="password">Senha</label>
+                </div>
             </div>
-        </div>
 
-        <button class="btn waves-effect waves-light" type="submit" name="action">Logar
-            <i class="material-icons right"></i>
-        </button>
-        <div class="recuperar">
+            <button class="btn waves-effect waves-light" type="submit" name="action">Logar
+                <i class="material-icons right"></i>
+            </button>
 
-            <p><a href="#">Esqueci minha senha</a></p>
-        </div>
+            <div class="recuperar">
+                <p><a href="#">Esqueci minha senha</a></p>
+            </div>
+        </form>
     </div>
 
 </body>
