--- a/app/src/main/resources/templates/login/login.html
+++ b/app/src/main/resources/templates/login/login.html
@@ -13,35 +13,45 @@
 </head>
 
 <body>
-    <div class="container">
-        <h1>HospeBem</h1>
-
-        <form th:action="@{/login}" method="POST">
-            <div class="row">
-                <div class="input-field col">
-                    <i class="material-icons prefix">account_circle</i>
-                    <input id="first_name" type="text" class="validate">
-                    <label for="first_name">Usuário</label>
+    <header>
+        <nav class="navbar">
+            <div class="nav-wrapper container">
+                <span>
+                    HOSPEBEM
+                </span>
+            </div>
+        </nav>
+    </header>
+    <main>
+        <div class="container card-content valign center">
+            <h1>HospeBem</h1>
+            <form th:action="@{/login}" method="POST">
+                <div class="row">
+                    <div class="input-field col s6 offset-s3">
+                        <i class="material-icons prefix">account_circle</i>
+                        <input id="first_name" type="text" class="validate">
+                        <label for="first_name">Usuário</label>
+                    </div>
                 </div>
-            </div>
 
-            <div class="row">
-                <div class="input-field col">
-                    <i class="material-icons prefix">lock</i>
-                    <input id="password" type="password" class="validate">
-                    <label for="password">Senha</label>
+                <div class="row">
+                    <div class="input-field col s6 offset-s3">
+                        <i class="material-icons prefix">lock</i>
+                        <input id="password" type="password" class="validate">
+                        <label for="password">Senha</label>
+                    </div>
                 </div>
-            </div>
 
-            <button class="btn waves-effect waves-light" type="submit" name="action">Logar
-                <i class="material-icons right"></i>
-            </button>
+                <button class="btn waves-effect waves-light" type="submit" name="action">Logar
+                    <i class="material-icons right"></i>
+                </button>
 
-            <div class="recuperar">
-                <p><a href="#">Esqueci minha senha</a></p>
-            </div>
-        </form>
-    </div>
+                <div class="recuperar">
+                    <p><a href="#">Esqueci minha senha</a></p>
+                </div>
+            </form>
+        </div>
+    </main>
 
 </body>
 
