--- a/app/src/main/resources/templates/solicitacao/cadastro.html
+++ b/app/src/main/resources/templates/solicitacao/cadastro.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-br" xmlns:th="http://www.w3.org/1999/xhtml">
 
 <head>
     <meta charset="UTF-8">
@@ -80,40 +80,26 @@
                 </div>
 
                 <h4>Dados do Acompanhante</h4>
-                <div class="col s12">
-                    <h5>Acompanhante 1:</h5>
-                    <span>Nome Completo:</span>
-                    <input name="acompanhante.nome" type="text">
+
+                <div th:each="acompanhante, itemStat : *{acompanhantes}">
+                    <div class="col s12">
+                        <h5 th:text="'Acompanhante ' + ${indice + 1}">:</h5>
+                        <span>Nome Completo:</span>
+                        <input th:field="*{acompanhantes[__${itemStat.index}__].nome}" type="text">
+                    </div>
+
+                    <div class="col s12">
+                        <label>
+                            <input th:field="*{acompanhantes[__${itemStat.index}__].genero1}" type="radio" value ="F" >
+                            <span>F</span>
+                        </label>
+                        <label>
+                            <input th:field="*{acompanhantes[__${itemStat.index}__].genero1}" type="radio" value ="M">
+                            <span>M</span>
+                        </label>
+                    </div>
                 </div>
 
-                <div class="col s12">
-                    <label>
-                        <input name="acompanhante.genero1" type="radio" value ="F" >
-                        <span>F</span>
-                    </label>
-                    <label>
-                        <input name="acompanhante.genero1" type="radio" value ="M">
-                        <span>M</span>
-                    </label>
-                </div>
-
-
-                <div class="col s12">
-                    <h5>Acompanhante 2:</h5>
-                    <span>Nome Completo:</span>
-                    <input name="acompanhante.nome" type="text">
-                </div>
-
-                <div class="col s12">
-                    <label>
-                        <input name="acompanhante.genero2" type="radio" value ="F" >
-                        <span>F</span>
-                    </label>
-                    <label>
-                        <input name="acompanhante.genero2" type="radio" value ="M">
-                        <span>M</span>
-                    </label>
-                </div>
 
                 <div class="col s12">
                     <button type="submit">Salvar</button>
